added content to main banner

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,6 +12,10 @@ body {
     font-family: 'Pacifico';
 }
 
+.title:hover {
+    @apply text-blue-300
+}
+
 .primaryBg {
     @apply bg-gray-800;
 }
